--- a/static/css/import_library.css
+++ b/static/css/import_library.css
@@ -30,6 +30,38 @@ div#content{
     text-align: center;
 }
 
+/* ======= */
+/* Chooser */
+/* ======= */
+
+div#import_sources{
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+div#import_sources > div{
+    margin: 1em auto;
+}
+
+div#import_sources span{
+    font-size: 1.25em;
+}
+
+.import_source_icon{
+    height: 6rem;
+    width: 6rem;
+    font-size: 6em;
+    vertical-align: middle;
+    margin: 0 0 1rem 0;
+}
+
+/* ================ */
+/* Import directory */
+/* ================ */
+
 /* File browser */
 div#browse{
     background-color: #151c25;
@@ -171,6 +203,90 @@ div#results{
 
 a#finished{
     font-size: 1.5em;
+}
+
+
+/* =========== */
+/* Import kodi */
+/* =========== */
+div#kodi_server_info{
+    font-size: 1.25em;
+}
+
+div#start_import_kodi{
+    display: inline-block;
+    cursor: pointer;
+    margin: 2em auto 0 auto;
+    font-size: 2em;
+}
+
+div#kodi_response table td{
+    padding: 0.2em 1em;
+}
+
+div#kodi_response p{
+    margin: 0 auto;
+}
+
+div#kodi_remote_map{
+    max-width: 75%;
+    background-color: #151c25;
+    margin: 0 auto;
+    padding: 0.1em 1em 1em 1em;
+}
+
+div#kodi_remote_map input{
+    background-color: #080f18;
+    margin-right: 1em;
+}
+
+button{
+    background-color: #ccc;
+    border-radius: 4px;
+    border: none;
+    padding: 0.25em;
+    margin: 0 1em 0 0;
+}
+
+span#kodi_import{
+    font-size: 1.5em;
+    margin-bottom: 2em;
+    display: inline-block;
+}
+
+/* =========== */
+/* Import plex */
+/* =========== */
+div#start_import_plex{
+    display: inline-block;
+    cursor: pointer;
+    margin: 2em auto 0 auto;
+    font-size: 2em;
+}
+
+div#plex_remote_map{
+    max-width: 75%;
+    background-color: #151c25;
+    margin: 0 auto;
+    padding: 0.1em 1em 1em 1em;
+}
+
+div#plex_remote_map input{
+    background-color: #080f18;
+    margin-right: 1em;
+}
+
+span#plex_import{
+    font-size: 1.5em;
+    margin-bottom: 2em;
+    display: inline-block;
+}
+
+/* Shared */
+
+div#no_new_movies{
+    text-align: center;
+    margin: 0 auto;
 }
 
 #thinker{
