Add ability to import from CouchPotato
Backend loosely based on ruby script byreddit user /u/mekon

https://gist.github.com/anonymous/5ce4df44efa338bb305cd3336e5ab7a7

--- a/static/css/import_library.css
+++ b/static/css/import_library.css
@@ -282,6 +282,26 @@ span#plex_import{
     display: inline-block;
 }
 
+/* ========= */
+/* Import CP */
+/* ========= */
+div#start_import_cp{
+    display: inline-block;
+    cursor: pointer;
+    margin: 2em auto 0 auto;
+    font-size: 2em;
+}
+
+div#cp_response table th{
+    padding: 0 2em;
+}
+
+span#cp_import{
+    font-size: 1.5em;
+    margin-bottom: 2em;
+    display: inline-block;
+}
+
 /* Shared */
 
 div#no_new_movies{
