--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,13 @@ body{
 
 button{
     font-family: Raleway, sans-serif;
+    background-color: #ccc;
+    border-radius: 4px;
+    border: none;
+    padding: 0.5em;
+    margin: 0 1em 0 0;
+    outline: none;
+    cursor: pointer;
 }
 
 input, select{
@@ -138,6 +145,7 @@ div#overlay {
 ::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
+  background: transparent;
 }
 ::-webkit-scrollbar-thumb {
   background: #ccc;
