Add bulk management options
Basic functionality to execute operations in bulk:
* Removing movies
* Changing quality profiles
* Updating Metadata
* Reverting movie to state as if it was just added

--- a/static/css/status.css
+++ b/static/css/status.css
@@ -230,6 +230,7 @@ ul#movie_list.compact li span.movie_info span.rated{
     opacity: 0.65;
 }
 
+div#manage,
 div#import{
     margin: 0 0 2em 0;
     text-align: center;
