--- a/static/css/manage.css
+++ b/static/css/manage.css
@@ -98,6 +98,16 @@ div#_stats h1{
     margin-top: 0;
 }
 
+span#generate_stats{
+    font-size: 1.5em;
+    display: block;
+    cursor: pointer;
+}
+
+span.tip{
+    font-size: 0.9em;
+}
+
 div.chart_box{
     color: #ccc;
     overflow: auto;
