--- a/static/css/Neon/shutdown.css
+++ b/static/css/Neon/shutdown.css
@@ -1,5 +1,5 @@
 body, html{
-    background: url('../../images/logo_bg.png') no-repeat 50% 50% #000;
+    background: url('../images/logo_bg.png') no-repeat 50% 50% #000;
 }
 
 
