--- a/static/css/Dark-Soundjester/shutdown.css
+++ b/static/css/Dark-Soundjester/shutdown.css
@@ -1,6 +1,6 @@
 body, html{
     background-color: #111111;
-    background: url('../../images/logo_bg.png') no-repeat 50% 50% #111111;
+    background: url('../images/logo_bg.png') no-repeat 50% 50% #111111;
 }
 
 /* loading animation */
