--- a/static/css/Light/restart.css
+++ b/static/css/Light/restart.css
@@ -1,3 +1,3 @@
 body, html{
-    background: url('../../images/logo_bg.png') no-repeat 50% 50% #eee;
+    background: url('../images/logo_bg.png') no-repeat 50% 50% #eee;
 }
