--- a/static/css/Light/update.css
+++ b/static/css/Light/update.css
@@ -1,3 +1,3 @@
 body, html{
-    background: url('../../images/logo_bg.png') no-repeat 50% 50% #080f18;
+    background: url('../images/logo_bg.png') no-repeat 50% 50% #080f18;
 }
