--- a/static/css/Neon/fourohfour.css
+++ b/static/css/Neon/fourohfour.css
@@ -1,3 +1,3 @@
 body, html{
-    background: url('../../images/logo_bg.png') no-repeat 50% 50% #000;
+    background: url('../images/logo_bg.png') no-repeat 50% 50% #000;
 }
