Because git can be dumb
For no reason Git didn't merge ALL of the changes from the last update, so this finishes it up. At least it was nothign critical...

--- a/static/css/add_movie.css
+++ b/static/css/add_movie.css
@@ -25,6 +25,7 @@ li.movie img{
     width: 100%;
     box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
     cursor: pointer;
+    margin-bottom: -0.25em;
 }
 
 li.movie div.movie_actions{
