--- a/static/css/themes/Default.less
+++ b/static/css/themes/Default.less
@@ -6,91 +6,96 @@
 @font-main: "Open Sans", Calibri, Candara, Arial, sans-serif;
 @font-monospace: Menlo, Monaco, Consolas, "Courier New", monospace;
 
-@bg-color-main: #080F18;
-@bg-color-inverse: #E0E0E0;
-@bg-color-accent: #151c25; // Wells, title backgrounds
-@bg-color-dark: #080F18;
+@bg-color-main: #131619;
+@bg-color-inverse: #CCCCCC;
+@bg-color-accent: #131619; // Wells, title backgrounds
+@bg-color-dark: #262C32;
+@bg-color-stripe: #262C32;
 @bg-color-transparent: transparent;
 
-@border-color-main-light: #2A384A;
-@border-color-main: #1F2A37;
-@border-color-main-dark: #151c25;
+@border-color-main-light: #CCCCCC;
+@border-color-main: #131619;
 
 // Nav Bar
-@bg-color-navbar: #151c25;
-@bg-color-navbar-hover: #080f18;
-@bg-color-dropdown: #151c25;
+@bg-color-navbar: #131619;
+@bg-color-navbar-hover: #262C32;
+@bg-color-dropdown-hover: #262C32;
 @font-color-navbar: #E0E0E0;
-@font-color-dropdown-hover: #fff;
-@border-color-navbar: #080f18;
+@font-color-dropdown-hover: #E0E0E0;
+@border-color-navbar: #131619;
+@border-color-dropdown: #262C32;
 
 // Font Colors
-@font-color-main: #E0E0E0;
+@font-color-main: #CCCCCC;
 @font-color-muted: #9E9E9E;
-@font-color-main-inverse: #080F18;
-@font-color-label: @font-color-main;
+@font-color-main-inverse: #131619;
+@font-color-label: #131619;
 @font-color-hidden: transparent;
 
 // Colors for Search Result and Movie status
 @status-color-bad: #F44336;
-@status-color-available: #3F51B5;
-@status-color-waiting: #607D8B;
+@status-color-available: #C0CA33;
+@status-color-waiting: #90A4AE;
 @status-color-wanted: #FF9800;
-@status-color-found: #3F51B5;
-@status-color-snatched: #03A9F4;
+@status-color-found: #C0CA33;
+@status-color-snatched: #42A5F5;
 @status-color-finished: #4CAF50;
 
 // Buttons
 // font-color-[X]-hover applies to text-buttons (ie a.btn.text-info)
-@font-color-button: #e0e0e0;
-@font-color-button-hover: #BDBDBD;
+@radius-button: 0.2em;
 
-@bg-color-default: #1F2A37;
-@bg-color-default-hover: #151c25;
-@border-color-default: #151c25;
-@border-color-default-hover: #080F18;
+@font-color-button: #131619;
+@font-color-button-hover: #CCCCCC;
 
-@font-color-primary: #2196F3;			// 500
-@font-color-primary-hover: #1976D2;		// 700
-@bg-color-primary: #2196F3;				// 500
-@bg-color-primary-hover: #1976D2;		// 700
-@border-color-primary: #1976D2;			// 700
-@border-color-primary-hover: #10427b;	// 900
+@bg-color-default: #CCCCCC;
+@bg-color-default-hover: #131619;
+@border-color-default: #CCCCCC;
+@border-color-default-hover: #CCCCCC;
+
+@font-color-primary: #CCCCCC;
+@font-color-primary-hover: #42A5F5;
+@bg-color-primary: #42A5F5;
+@bg-color-primary-hover: #131619;
+@border-color-primary: #42A5F5;
+@border-color-primary-hover: #42A5F5;
 
 @font-color-success: #4CAF50;
-@font-color-success-hover: #388E3C;
+@font-color-success-hover: #131619;
 @bg-color-success: #4CAF50;
-@bg-color-success-hover: #388E3C;
-@border-color-success: #388E3C;
-@border-color-success-hover: #1B5E20;
+@bg-color-success-hover: #131619;
+@border-color-success: #4CAF50;
+@border-color-success-hover: #4CAF50;
 
-@font-color-info: #9C27B0;
-@font-color-info-hover: #7B1FA2;
-@bg-color-info: #9C27B0;
-@bg-color-info-hover: #7B1FA2;
-@border-color-info: #7B1FA2;
-@border-color-info-hover: #4A148C;
+@font-color-info: #AB47BC;
+@font-color-info-hover: #131619;
+@bg-color-info: #AB47BC;
+@bg-color-info-hover: #131619;
+@border-color-info: #AB47BC;
+@border-color-info-hover: #AB47BC;
 
-@font-color-warning: #FF9800;
-@font-color-warning-hover: #F57C00;
-@bg-color-warning: #FF9800;
-@bg-color-warning-hover: #F57C00;
-@border-color-warning: #F57C00;
-@border-color-warning-hover: #E65100;
+@font-color-warning: #FFA726;
+@font-color-warning-hover: #131619;
+@bg-color-warning: #FFA726;
+@bg-color-warning-hover: #131619;
+@border-color-warning: #FFA726;
+@border-color-warning-hover: #FFA726;
 
 @font-color-danger: #F44336;
-@font-color-danger-hover: #D32F2F;
+@font-color-danger-hover: #131619;
 @bg-color-danger: #F44336;
-@bg-color-danger-hover: #D32F2F;
-@border-color-danger: #D32F2F;
-@border-color-danger-hover: #B71C1C;
+@bg-color-danger-hover: #131619;
+@border-color-danger: #F44336;
+@border-color-danger-hover: #F44336;
 
 @border-color-link: transparent;
 @bg-color-link: transparent;
 
 // Special Stuff
-@border-color-input-active: #2196F3;
+@bg-color-input: #262C32;
+@border-color-input: #262C32;
+@border-color-input-active: #42A5F5;
 @font-color-code: #F44336;
 @bg-color-code: #FFEBEE;
-@bg-color-table-hover: #151c25;
+@bg-color-table-hover: #131619;
 @carousel-indicator: #000000;
