--- a/static/css/themes/Light.less
+++ b/static/css/themes/Light.less
@@ -9,21 +9,28 @@
 @bg-color-main: #FFFFFF;
 @bg-color-inverse: #212121;
 @bg-color-accent: #F5F5F5; // Wells, title backgrounds
-@bg-color-dark: #E0E0E0;
+@bg-color-dark: #FFFFFF;
+@bg-color-stripe: #E0E0E0;
 @bg-color-transparent: transparent;
 
 @border-color-main-light: #FFFFFF;
 @border-color-main: #E0E0E0;
-@border-color-main-dark: #BDBDBD;
 
 // Nav Bar
 @bg-color-navbar: #212121;
 @bg-color-navbar-hover: #090909;
-@bg-color-dropdown: #2196F3;
+@bg-color-dropdown-hover: #2196F3;
 @font-color-navbar: #FFFFFF;
 @font-color-dropdown-hover: #FFFFFF;
 @border-color-navbar: #090909;
+@border-color-dropdown: #090909;
 
+// Font Colors
+@font-color-main: #212121;
+@font-color-muted: #9E9E9E;
+@font-color-main-inverse: #FFFFFF;
+@font-color-label: @font-color-main;
+@font-color-hidden: transparent;
 
 // Colors for Search Result and Movie status
 @status-color-bad: #F44336;
@@ -34,17 +41,12 @@
 @status-color-snatched: #03A9F4;
 @status-color-finished: #4CAF50;
 
-// Font Colors
-@font-color-main: #212121;
-@font-color-muted: #9E9E9E;
-@font-color-main-inverse: #FFFFFF;
-@font-color-label: @font-color-main;
-@font-color-hidden: transparent;
-
 // Buttons
 // font-color-[X]-hover applies to text-buttons (ie a.btn.text-info)
-@font-color-button: #212121;
-@font-color-button-hover: #212121;
+@radius-button: 0;
+
+@font-color-button: #FFF;
+@font-color-button-hover: #E0E0E0;
 
 @bg-color-default: #212121;
 @bg-color-default-hover: #090909;
@@ -90,6 +92,8 @@
 @bg-color-link: transparent;
 
 // Special Stuff
+@bg-color-input: #FFFFFF;
+@border-color-input: #E0E0E0;
 @border-color-input-active: #2196F3;
 @font-color-code: #F44336;
 @bg-color-code: #FFEBEE;
