--- a/static/css/themes/Charcoal.less
+++ b/static/css/themes/Charcoal.less
@@ -10,19 +10,20 @@
 @bg-color-inverse: #F5F5F5;
 @bg-color-accent: #2a2a2a; // Wells, title backgrounds
 @bg-color-dark: #1d1d1d;
+@bg-color-stripe: #1d1d1d;
 @bg-color-transparent: transparent;
 
 @border-color-main-light: #2a2a2a;
 @border-color-main: #090909;
-@border-color-main-dark: #000000;
 
 // Nav Bar
 @bg-color-navbar: #1d1d1d;
 @bg-color-navbar-hover: #151515;
-@bg-color-dropdown: #151515;
+@bg-color-dropdown-hover: #151515;
 @font-color-navbar: #FFFFFF;
 @font-color-dropdown-hover: #FFFFFF;
 @border-color-navbar: #151515;
+@border-color-dropdown: #151515;
 
 // Font Colors
 @font-color-main: #F5F5F5;
@@ -41,6 +42,9 @@
 @status-color-finished: #4CAF50;
 
 // Buttons
+// font-color-[X]-hover applies to text-buttons (ie a.btn.text-info)
+@radius-button: 0em;
+
 @font-color-button: #F5F5F5;
 @font-color-button-hover: #9E9E9E;
 
@@ -88,8 +92,11 @@
 @bg-color-link: transparent;
 
 // Special Stuff
+@bg-color-input: #1d1d1d;
+@border-color-input: #151515;
 @border-color-input-active: #2196F3;
 @font-color-code: #F44336;
 @bg-color-code: #FFEBEE;
 @bg-color-table-hover: #1d1d1d;
 @carousel-indicator: #000000;
+
