--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -90,6 +90,16 @@
                     </ul>
                 </li>
             </ul>
+
+            <div class="navbar-right btn-group">
+                <a class="btn text-primary" href="https://www.reddit.com/r/watcher/" target="_blank">
+                    <i class="mdi mdi-reddit"></i>
+                </a>
+                <a class="btn text-primary" href="https://github.com/nosmokingbandit/watcher3" target="_blank">
+                    <i class="mdi mdi-github-circle"></i>
+                </a>
+            </div>
+
         </div>
     </div>
 </nav>
