Fix theme files from wonky merge
Git just decided not to merge a handful of files from the development branch, so this corrects it.

--- a/static/css/themes/Default.less
+++ b/static/css/themes/Default.less
@@ -99,3 +99,13 @@
 @bg-color-code: #FFEBEE;
 @bg-color-table-hover: #131619;
 @carousel-indicator: #000000;
+
+
+form#profiles > div,
+form#profiles .panel{
+    border: 1px solid #262C32;
+}
+
+form#profiles .panel-heading{
+    border-bottom: 1px solid #262C32;
+}
