--- a/static/css/themes/Spruce.less
+++ b/static/css/themes/Spruce.less
@@ -1,4 +1,4 @@
-// out: Forest-Dark.css, compress: true
+// out: Spruce.css, compress: true
 
 @import url("./theme_base.less");
 
@@ -10,19 +10,20 @@
 @bg-color-inverse: #EEEEEE;
 @bg-color-accent: #202c22; // Wells, title backgrounds
 @bg-color-dark: #131819;
+@bg-color-stripe: #131819;
 @bg-color-transparent: transparent;
 
 @border-color-main-light: #202c22;
 @border-color-main: #000000;
-@border-color-main-dark: #000000;
 
 // Nav Bar
 @bg-color-navbar: #111613;
 @bg-color-navbar-hover: #202c22;
-@bg-color-dropdown: #202c22;
+@bg-color-dropdown-hover: #202c22;
 @font-color-navbar: #E0E0E0;
 @font-color-dropdown-hover: #E0E0E0;
 @border-color-navbar: #000000;
+@border-color-dropdown: #202c22;
 
 // Font Colors
 @font-color-main: #E0E0E0;
@@ -41,6 +42,8 @@
 @status-color-finished: darken(#4CAF50, 25%);
 
 // Buttons
+@radius-button: 0.75em;
+
 @font-color-button: #E0E0E0;
 @font-color-button-hover: #BDBDBD;
 
@@ -88,6 +91,8 @@
 @bg-color-link: transparent;
 
 // Special Stuff
+@bg-color-input: #131819;
+@border-color-input: #202c22;
 @border-color-input-active: #2196F3;
 @font-color-code: #F44336;
 @bg-color-code: #FFEBEE;
