--- a/static/css/themes/theme_base.less
+++ b/static/css/themes/theme_base.less
@@ -2209,7 +2209,7 @@ caption {
 label {
 	display: inline-block;
 	max-width: 100%;
-	margin-bottom: 0.25em;
+	margin: 1em 0 0.25em 0;
 	font-weight: bold;
 	line-height: 1em;
 }
