Minor theme tweaks.

--- a/static/css/themes/theme_base.less
+++ b/static/css/themes/theme_base.less
@@ -7193,6 +7193,9 @@ button.close {
 		color: @font-color-main;
 	}
 }
+.modal-dialog{
+	max-width: 960px;
+}
 .modal.fade {
 	.modal-dialog {
 		-webkit-transform: translate(0, -25%);
