Add YTS torrent provider

--- a/templates/settings/indexers.html
+++ b/templates/settings/indexers.html
@@ -145,6 +145,16 @@
                         </span>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <span class="input-group-addon box_box">
+                            <i class="mdi mdi-checkbox-blank-outline c_box" id="yts" value="${config['Torrent']['yts']}"></i>
+                        </span>
+                        <span class="input-group-item form-control">
+                            YTS
+                        </span>
+                    </div>
+                </div>
             </form>
 
             <a id="save_settings" class="btn btn-success pull-right" onclick="save_settings(event, this)">
