Show search details modal before loading trailer
Makes the modal load instantly regardless of trailer success

--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -78,7 +78,7 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="{trailer}" id="trailer"></iframe>
+                                        <iframe src="" id="trailer"></iframe>
                                     </div>
                                     <div class="well stats">
                                         <span>
